Change grid to 16*16 & fix flex-wrap

--- a/static/style.css
+++ b/static/style.css
@@ -3,6 +3,6 @@
 #grid {
     display: flex;
     flex-wrap: wrap;
-    max-width: 250px;
+    max-width: calc(20px * 16);
     justify-content: center;
 }
